--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -3,11 +3,18 @@
 
 The Apache Commons RNG team is pleased to announce the release of commons-rng-1.0
 
-The Apache Commons RNG project provides implementations of random numbers generators.
+The Apache Commons RNG project provides pure-Java implementation of pseudo-random generators.
 
 This is the first release of Apache Commons RNG.
-The minimum version of the Java platform required to compile and use
-Apache Commons RNG 1.0 is Java 6.
+Apache Commons RNG 1.0 contains the following modules:
+ commons-rng-client-api (requires Java 6)
+ commons-rng-core (requires Java 6)
+ commons-rng-simple (requires Java 6)
+ commons-rng-sampling (requires Java 6)
+ commons-rng-jmh (requires Java 6)
+ commons-rng-examples (requires Java 7)
+For more information, please refer to the userguide and apidocs:
+ http://commons.apache.org/rng/
 
 No changes defined in this version.
 
