--- a/RELEASE-NOTES.txt
+++ b/RELEASE-NOTES.txt
@@ -1,7 +1,7 @@
 
               Apache Commons RNG 1.0 RELEASE NOTES
 
-The Apache Commons RNG team is pleased to announce the release of commons-rng-1.0
+The Apache Commons RNG team is pleased to announce the release of Apache Commons RNG 1.0
 
 The Apache Commons RNG project provides pure-Java implementation of pseudo-random generators.
 
@@ -13,8 +13,6 @@ Apache Commons RNG 1.0 contains the following modules:
  commons-rng-sampling (requires Java 6)
  commons-rng-jmh (requires Java 6)
  commons-rng-examples (requires Java 7)
-For more information, please refer to the userguide and apidocs:
- http://commons.apache.org/rng/
 
 No changes defined in this version.
 
